# analisis-combustible-telemetria

./: .gitignore  GEMINI.md  README.md  plan.md  pyproject.toml  requirements.txt
docs/: Analisis_Telemetria_Combustibles.md
notebooks/: Conciliacion_combustible.ipynb  codigo-notebook.py  procesamiento-gestion-bus.ipynb
src/: reconciliar_combustible.py  telemetria_anomalias.py
src/analisis_reporte_telemetria/: __init__.py  config.py  gestion_bus.py
src/analisis_reporte_telemetria/cleaners/: data_cleaner.py
src/analisis_reporte_telemetria/processors/: fuel_processor.py  reconciliation_processor.py
src/analisis_reporte_telemetria/readers/: form_reader.py  gestion_bus_reader.py
src/analisis_reporte_telemetria/utils/: helpers.py
